--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	<title>SardCoin</title>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc&libraries=places" async defer></script>
 </head>
 <body>
   <!-- App Loading... -->
